[gd_scene load_steps=12 format=2]

[ext_resource path="res://menus/maps/forest.gd" type="Script" id=1]
[ext_resource path="res://tiles/forest_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://sprites/tackbankforest/rock1.png" type="Texture" id=3]
[ext_resource path="res://sprites/tackbankforest/tallgrass1.png" type="Texture" id=4]
[ext_resource path="res://sprites/tackbankforest/tree1.png" type="Texture" id=5]
[ext_resource path="res://sprites/tackbankforest/tree3.png" type="Texture" id=6]
[ext_resource path="res://sprites/tackbankforest/tree2.png" type="Texture" id=7]
[ext_resource path="res://sprites/tackbankforest/tree4.png" type="Texture" id=8]
[ext_resource path="res://menus/maps/questMarkerButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://gui/scroll_light.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 128, 64 )
margin_left = 22.0
margin_right = 22.0
margin_top = 18.0
margin_bottom = 18.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Margin" ]

[node name="Node2D" type="Node2D"]

script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 10, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 65536, 10, 0, 65537, 0, 0, 65538, 10, 0, 65539, 0, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 78, 0, 131083, 78, 0, 131084, 10, 0, 131085, 10, 0, 131086, 10, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 78, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 10, 0, 262144, 10, 0, 262145, 10, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 10, 0, 262153, 10, 0, 262154, 10, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 10, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 10, 0, 327691, 10, 0, 327692, 78, 0, 327693, 0, 0, 327694, 10, 0, 393216, 0, 0, 393217, 0, 0, 393218, 10, 0, 393219, 78, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 10, 0, 393225, 78, 0, 393226, 0, 0, 393227, 0, 0, 393228, 78, 0, 393229, 10, 0, 393230, 10, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 78, 0, 458758, 78, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 10, 0, 524288, 78, 0, 524289, 78, 0, 524290, 78, 0, 524291, 78, 0, 524292, 78, 0, 524293, 78, 0, 524294, 0, 0, 524295, 78, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 78, 0, 524301, 0, 0, 524302, 78, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 78, 0, 589834, 78, 0, 589835, 78, 0, 589836, 78, 0, 589837, 0, 0, 589838, 78, 0, 655360, 0, 0, 655361, 78, 0, 655362, 78, 0, 655363, 78, 0, 655364, 78, 0, 655365, 78, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 78, 0, 720896, 0, 0, 720897, 0, 0, 720898, 78, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 78, 0, 720907, 78, 0, 720908, 78, 0, 720909, 0, 0, 720910, 78, 0, 786432, 78, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 78, 0, 786439, 78, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 10, 0, 786445, 0, 0, 786446, 10, 0, 851968, 0, 0, 851969, 0, 0, 851970, 78, 0, 851971, 78, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 78, 0, 851977, 78, 0, 851978, 78, 0, 851979, 0, 0, 851980, 0, 0, 851981, 78, 0, 851982, 78, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 78, 0, 917517, 78, 0, 917518, 78, 0, 983040, 78, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 78, 0, 983047, 78, 0, 983048, 78, 0, 983049, 78, 0, 983050, 78, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 78, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 78, 0, 1048579, 78, 0, 1048580, 0, 0, 1048581, 78, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 78, 0, 1048588, 78, 0, 1048589, 78, 0, 1048590, 78, 0, 1114112, 0, 0, 1114113, 78, 0, 1114114, 78, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 78, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 78, 0, 1114123, 78, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 78, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 78, 0, 1179653, 78, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 10, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 10, 0, 1245196, 0, 0, 1245197, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 10, 0, 1310725, 10, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 10, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 10, 0, 1310733, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 10, 0, 1376259, 10, 0, 1376260, 10, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 10, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 10, 0, 1376268, 10, 0, 1376269, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 10, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 10, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 10, 0, 1441804, 0, 0, 1441805, 10, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 10, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 10, 0, 1507340, 0, 0, 1507341, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572873, 1, 0, 1572875, 0, 0, 1572876, 0, 0, 1572877, 0, 0, 1572878, 10, 0, 1638400, 0, 0, 1638401, 10, 0, 1638402, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 0, 0, 1638407, 0, 0, 1638411, 0, 0, 1638412, 10, 0, 1638413, 0, 0, 1638414, 10, 0, 1703936, 0, 0, 1703937, 10, 0, 1703938, 10, 0, 1703939, 0, 0, 1703940, 0, 0, 1703941, 0, 0, 1703942, 10, 0, 1703943, 0, 0, 1703944, 0, 0, 1703945, 1, 0, 1703947, 0, 0, 1703948, 0, 0, 1703949, 0, 0, 1703950, 10, 0, 1769472, 0, 0, 1769473, 10, 0, 1769474, 0, 0, 1769475, 0, 0, 1769476, 0, 0, 1769477, 0, 0, 1769478, 0, 0, 1769479, 10, 0, 1769483, 10, 0, 1769484, 0, 0, 1769485, 0, 0, 1769486, 10, 0, 1835008, 0, 0, 1835009, 0, 0, 1835010, 0, 0, 1835011, 0, 0, 1835012, 0, 0, 1835013, 0, 0, 1835014, 0, 0, 1835015, 0, 0, 1835016, 0, 0, 1835017, 1, 0, 1835019, 0, 0, 1835020, 0, 0, 1835021, 0, 0, 1835022, 10, 0, 1900544, 10, 0, 1900545, 10, 0, 1900546, 10, 0, 1900547, 10, 0, 1900548, 10, 0, 1900549, 10, 0, 1900550, 10, 0, 1900551, 10, 0, 1900552, 10, 0, 1900553, 10, 0, 1900554, 10, 0, 1900555, 10, 0, 1900556, 10, 0, 1900557, 10, 0, 1900558, 10, 0 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="rocks and grass" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="rock1" type="Sprite" parent="rocks and grass" index="0"]

position = Vector2( 420, 350 )
texture = ExtResource( 3 )

[node name="rock2" type="Sprite" parent="rocks and grass" index="1"]

position = Vector2( 40, 480 )
texture = ExtResource( 3 )

[node name="tallgrass1" type="Sprite" parent="rocks and grass" index="2"]

position = Vector2( 70, 490 )
texture = ExtResource( 4 )

[node name="trees" type="Node" parent="." index="2"]

[node name="tree1" type="Sprite" parent="trees" index="0"]

position = Vector2( 400, 50 )
texture = ExtResource( 5 )

[node name="tree2" type="Sprite" parent="trees" index="1"]

position = Vector2( 460, 110 )
texture = ExtResource( 6 )

[node name="tree3" type="Sprite" parent="trees" index="2"]

position = Vector2( 110, 270 )
texture = ExtResource( 5 )

[node name="tree6" type="Sprite" parent="trees" index="3"]

position = Vector2( 480, 350 )
texture = ExtResource( 7 )

[node name="tree4" type="Sprite" parent="trees" index="4"]

position = Vector2( 130, 360 )
texture = ExtResource( 5 )

[node name="tree5" type="Sprite" parent="trees" index="5"]

position = Vector2( 460, 460 )
texture = ExtResource( 7 )

[node name="tree7" type="Sprite" parent="trees" index="6"]

position = Vector2( 60, 390 )
texture = ExtResource( 7 )

[node name="tree8" type="Sprite" parent="trees" index="7"]

position = Vector2( 180, 540 )
texture = ExtResource( 8 )

[node name="tree9" type="Sprite" parent="trees" index="8"]

position = Vector2( 410, 830 )
texture = ExtResource( 8 )

[node name="questMarker1" parent="." index="3" instance=ExtResource( 9 )]

margin_left = 90.0
margin_top = 790.0
margin_right = 166.0
margin_bottom = 860.0

[node name="questMarker2" parent="." index="4" instance=ExtResource( 9 )]

margin_left = 380.0
margin_top = 660.0
margin_right = 456.0
margin_bottom = 730.0

[node name="questMarker3" parent="." index="5" instance=ExtResource( 9 )]

margin_left = 40.0
margin_top = 530.0
margin_right = 116.0
margin_bottom = 600.0

[node name="questMarker4" parent="." index="6" instance=ExtResource( 9 )]

margin_left = 300.0
margin_top = 550.0
margin_right = 376.0
margin_bottom = 620.0

[node name="questMarker5" parent="." index="7" instance=ExtResource( 9 )]

margin_left = 360.0
margin_top = 200.0
margin_right = 436.0
margin_bottom = 270.0

[node name="questMarker6" parent="." index="8" instance=ExtResource( 9 )]

margin_left = 100.0
margin_top = 400.0
margin_right = 176.0
margin_bottom = 470.0

[node name="questMarker7" parent="." index="9" instance=ExtResource( 9 )]

margin_left = 50.0
margin_top = 80.0
margin_right = 126.0
margin_bottom = 150.0

[node name="questMarker8" parent="." index="10" instance=ExtResource( 9 )]

margin_left = 320.0
margin_top = 110.0
margin_right = 396.0
margin_bottom = 180.0

[node name="mapName" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 140.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.215686, 0.141176, 0.0156863, 1 )
text = "Tackbank Forest"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_styles" ]


