extends Node2D

func _ready():
	$questMarker1._set_data("forest01")
	$questMarker2._set_data("forest02")
	$questMarker3._set_data("forest03")
	$questMarker4._set_data("forest04")
	$questMarker5._set_data("forest05")
	$questMarker6._set_data("forest06")
	$questMarker7._set_data("forest07")
	$questMarker8._set_data("forest08")
